docker and different startup settings

--- a/springboot/src/main/resources/application-inst3.properties
+++ b/springboot/src/main/resources/application-inst3.properties
@@ -1,5 +1,5 @@
 spring.application.name=Learning Spring Boot
-# server.port=8080
+server.port=9003
 
 # spring.mustache.servlet.expose-request-attributes=true
 
