--- a/springboot/src/main/resources/application-setup.properties
+++ b/springboot/src/main/resources/application-setup.properties
@@ -1,9 +1,9 @@
 spring.application.name=Learning Spring Boot
-# server.port=8080
+server.port=9001
 
 # spring.mustache.servlet.expose-request-attributes=true
 
-app.config.header=Greeting Learning Spring Boot 3.0 fans!
+app.config.header=Greeting Learning Spring Boot 3.0 setup fans!
 
 app.config.intro=In this chapter, we are learning how to make a web app using Spring Boot 3.0
 
@@ -22,3 +22,13 @@ app.config.users[2].authorities[0]=ROLE_ADMIN
 app.config.users[3].username=user
 app.config.users[3].password=pass
 app.config.users[3].authorities[0]=ROLE_USER
+
+
+# JDBC DataSource settings
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+# JPA settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
