--- a/springboot/src/main/resources/application-test.properties
+++ b/springboot/src/main/resources/application-test.properties
@@ -1,19 +1,19 @@
-# spring.application.name=Learning Spring Boot
+# # spring.application.name=Learning Spring Boot
 
-# spring.mustache.servlet.expose-request-attributes=true
+# # spring.mustache.servlet.expose-request-attributes=true
 
-app.config.header=Greeting Test Team!
+# app.config.header=Greeting Test Team!
 
-app.config.intro=If you run into issues while testing, let me know!
+# app.config.intro=If you run into issues while testing, let me know!
 
-app.config.users[0].username=test1
-app.config.users[0].password=pass
-app.config.users[0].authorities[0]=ROLE_NOTHING
+# app.config.users[0].username=test1
+# app.config.users[0].password=pass
+# app.config.users[0].authorities[0]=ROLE_NOTHING
 
-app.config.users[1].username=test2
-app.config.users[1].password=pass
-app.config.users[1].authorities[0]=ROLE_USER
+# app.config.users[1].username=test2
+# app.config.users[1].password=pass
+# app.config.users[1].authorities[0]=ROLE_USER
 
-app.config.users[2].username=test-admin
-app.config.users[2].password=admin
-app.config.users[2].authorities[0]=ROLE_ADMIN
+# app.config.users[2].username=test-admin
+# app.config.users[2].password=admin
+# app.config.users[2].authorities[0]=ROLE_ADMIN
