--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -3,22 +3,22 @@ spring.application.name=Learning Spring Boot
 
 # spring.mustache.servlet.expose-request-attributes=true
 
-app.config.header=Greeting Learning Spring Boot 3.0 fans!
+# app.config.header=Greeting Learning Spring Boot 3.0 fans!
 
-app.config.intro=In this chapter, we are learning how to make a web app using Spring Boot 3.0
+# app.config.intro=In this chapter, we are learning how to make a web app using Spring Boot 3.0
 
-app.config.users[0].username=alice
-app.config.users[0].password=pass
-app.config.users[0].authorities[0]=ROLE_USER
+# app.config.users[0].username=alice
+# app.config.users[0].password=pass
+# app.config.users[0].authorities[0]=ROLE_USER
 
-app.config.users[1].username=bob
-app.config.users[1].password=pass
-app.config.users[1].authorities[0]=ROLE_USER
+# app.config.users[1].username=bob
+# app.config.users[1].password=pass
+# app.config.users[1].authorities[0]=ROLE_USER
 
-app.config.users[2].username=admin
-app.config.users[2].password=admin
-app.config.users[2].authorities[0]=ROLE_ADMIN
+# app.config.users[2].username=admin
+# app.config.users[2].password=admin
+# app.config.users[2].authorities[0]=ROLE_ADMIN
 
-app.config.users[3].username=user
-app.config.users[3].password=pass
-app.config.users[3].authorities[0]=ROLE_USER
+# app.config.users[3].username=user
+# app.config.users[3].password=pass
+# app.config.users[3].authorities[0]=ROLE_USER
