--- a/springboot/src/main/resources/application-aftersetup.properties
+++ b/springboot/src/main/resources/application-aftersetup.properties
@@ -1,34 +1,34 @@
-spring.application.name=Learning Spring Boot
-server.port=9002
+# spring.application.name=Learning Spring Boot
+# server.port=9002
 
-# spring.mustache.servlet.expose-request-attributes=true
+# # spring.mustache.servlet.expose-request-attributes=true
 
-app.config.header=Greeting Learning Spring Boot 3.0 aftersetup fans!
+# app.config.header=Greeting Learning Spring Boot 3.0 aftersetup fans!
 
-app.config.intro=In this chapter, we are learning how to make a web app using Spring Boot 3.0
+# app.config.intro=In this chapter, we are learning how to make a web app using Spring Boot 3.0
 
-app.config.users[0].username=alice
-app.config.users[0].password=pass
-app.config.users[0].authorities[0]=ROLE_USER
+# app.config.users[0].username=alice
+# app.config.users[0].password=pass
+# app.config.users[0].authorities[0]=ROLE_USER
 
-app.config.users[1].username=bob
-app.config.users[1].password=pass
-app.config.users[1].authorities[0]=ROLE_USER
+# app.config.users[1].username=bob
+# app.config.users[1].password=pass
+# app.config.users[1].authorities[0]=ROLE_USER
 
-app.config.users[2].username=admin
-app.config.users[2].password=admin
-app.config.users[2].authorities[0]=ROLE_ADMIN
+# app.config.users[2].username=admin
+# app.config.users[2].password=admin
+# app.config.users[2].authorities[0]=ROLE_ADMIN
 
-app.config.users[3].username=user
-app.config.users[3].password=pass
-app.config.users[3].authorities[0]=ROLE_USER
+# app.config.users[3].username=user
+# app.config.users[3].password=pass
+# app.config.users[3].authorities[0]=ROLE_USER
 
 
-# JDBC DataSource settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=password
-# JPA settings
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# # JDBC DataSource settings
+# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.username=postgres
+# spring.datasource.password=password
+# # JPA settings
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.show-sql=true
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
